--- a/CSS Moderno/responsividade/style.css
+++ b/CSS Moderno/responsividade/style.css
@@ -8,24 +8,30 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-@media (max-width: 795px) {
-  .img-content {
-    width: 500px;
-  }
-  .text-content {
-    font-size: 16px;
-  }
+.title-content {
+  text-align: center;
 }
 
-@media (max-width: 510px) {
+@media (max-width: 790px) {
   .img-content {
-    width: 100%;
+    width: 90%;
     height: auto;
   }
 }
 
-@media (max-width: 410px) {
+@media (max-width: 425px) {
+  .img-content {
+    width: 100%;
+    height: auto;
+  }
   .text-content {
+    font-size: 18px;
     text-align: center;
+  }
+}
+
+@media (max-width: 320px) {
+  .text-content {
+    font-size: 14px;
   }
 }
