--- a/CSS Moderno/layout_flex/style.css
+++ b/CSS Moderno/layout_flex/style.css
@@ -7,6 +7,11 @@
 .container {
   background-color: darkgray;
   min-height: 100vh;
+  display: flex;
+  gap: 0px 15px;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .item {
@@ -15,5 +20,7 @@
   border: 2px solid black;
   background-color: white;
   font-size: 20px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
